--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
+    "element-plus": "^2.11.3",
     "pinia": "^3.0.3",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
@@ -18,6 +20,7 @@
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.8.3",
     "unplugin-auto-import": "^20.1.0",
+    "unplugin-vue-components": "^29.1.0",
     "vite": "^7.1.6",
     "vue-tsc": "^3.0.7"
   }
