--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/three": "^0.180.0",
+    "@vueuse/core": "^13.9.0",
     "axios": "^1.12.2",
     "element-plus": "^2.11.3",
     "pinia": "^3.0.3",
+    "three": "^0.180.0",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
